test/conformance/kuttl/verifyImages/clusterpolicy/standard/mutateDigest-noverifyDigest-norequired/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutatedigest-policy
status:
  ready: true
