test/conformance/kuttl/verifyImages/clusterpolicy/standard/mutateDigest-noverifyDigest-norequired/script-check-for-error.yaml
## Checks that the manifests.yaml file CANNOT be successfully created. If it can, fail the test as this is incorrect.

apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
- script: |
    if kubectl apply -f manifests.yaml
    then 
      echo "Tested failed. Policy was created when it shouldn't have been."
      exit 1 
    else 
      echo "Test succeeded. Policy was not created as intended."
      exit 0
    fi
